--- a/TCP_Game_Server/TCP_Game_Server.vcxproj
+++ b/TCP_Game_Server/TCP_Game_Server.vcxproj
@@ -181,6 +181,9 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="pch.h" />
+    <ClInclude Include="YCCE.h" />
+    <ClInclude Include="YCFunc.h" />
+    <ClInclude Include="YCRandom.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
